BUG fixes: 1. Space around buttons on the slider. 2. Horizontal scrollbar in cluster details screen.

--- a/dp-web/src/app/modules/infra/views/cluster-details/cluster-details.component.scss
+++ b/dp-web/src/app/modules/infra/views/cluster-details/cluster-details.component.scss
@@ -5,7 +5,7 @@
   margin-top: 0 !important;
 }
 .page-container {
-  margin: -16px -16px 0;
+  padding: 14px 9px 20px;
 }
 
 .details-container {
